# TokenSentinel

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  INVESTOR_ONE_PAGER.md  ONBOARDING.md  README.md  RUNBOOK.md  TODOS.md  TOKENSENTINEL.md  TokenSentinel_Customer_Deck.pptx  USER_MANUAL.md  install.sh
.github/ISSUE_TEMPLATE/: enterprise-inquiry.md
.github/workflows/: ci.yml  deploy-sandbox.yml  publish-mcp.yml  release.yml
app/: Dockerfile  README.md  fly.toml  go.mod  go.sum  landing.html  main.go  main_test.go  report.html  sample-billing.csv
app/engine/: engine.go  engine_test.go  memstore.go  models.go  sqlite.go  store.go
benchmark/: k6-load-test.js  run-benchmark.sh
blueprint/continuous-optimization/: plan-continuous-optimization.md
blueprint/mcp-agentic-gateway/: plan-mcp-agentic-gateway.md
blueprint/prescriptive-engine/: plan-prescriptive-engine.md
demo/: README.md  demo-quick.ps1  demo-results.txt  demo.ps1  end-to-end.ps1
deploy/: README.md  run-e2e.ps1  run-e2e.sh
deploy/k8s/: cost-dashboard-deployment.yaml  erlang-monitor-deployment.yaml  go-router-deployment.yaml  redis-deployment.yaml  rust-proxy-deployment.yaml
docs/: api-reference.html  architecture.html  deployment.html  developer-guide.html  index.html  manual.html  quickstart.html
docs/css/: style.css
evolunet_slm/: AGENTS.md  Dockerfile  config.py  download_model.py  evolve.py  fitness_engine.py  mutation_operator.py  requirements.txt  service.py  test_evolunet.py
proxyops_gateway/: AGENTS.md  docker-compose.mcp.yml  docker-compose.override.yml  docker-compose.yml  globals.md
proxyops_gateway/cost-dashboard/: Dockerfile  admin_pricing.go  admin_ratelimit.go  admin_seed.go  admin_seed_test.go  apikeys.go  assessment_frontend.go  assessments.html  broker.go  dashboard.html  enterprise.go  enterprise.html  go.mod  go.sum  handlers.go  keyadmin.go  landing.html  landing_frontend.go  login.go  login.html  main.go  main_test.go  metrics.go  middleware.go  models.go  monitoring_email.go  monitoring_engine.go  monitoring_handlers.go  monitoring_models.go  otel.go  playground.go  prescriptive_engine.go  prescriptive_engine_test.go  prescriptive_export.go  prescriptive_handlers.go  prescriptive_import.go  prescriptive_models.go  prescriptive_report.go  prescriptive_store.go  report.html  (+2 more)
proxyops_gateway/erlang-monitor/: Dockerfile  rebar.config
proxyops_gateway/go-router/: Dockerfile  SEMANTIC_CACHE.md  adaptive_router.go  apikeys.go  benchmark_test.go  budget_test.go  cost_estimator.go  fallback_router.go  fallback_router_test.go  go.mod  go.sum  handlers.go  main.go  main_test.go  middleware.go  model_limits.go  model_selector.go  model_selector_test.go  otel.go  ratelimit.go  routing.go  semantic_cache.go  semantic_cache_test.go  token_counter.go  types.go  workerpool.go
proxyops_gateway/k8s/: configmap.yaml  cost-dashboard.yaml  deploy.sh  go-router.yaml  ingress.yaml  init-keys-job.yaml  mcp-gateway.yaml  (+7 more)
proxyops_gateway/mcp-gateway/: Cargo.toml  Dockerfile  README.md
proxyops_gateway/mcp-gateway/src/: lib.rs  main.rs
proxyops_gateway/mcp-gateway/src/a2a/: delegate.rs  mod.rs  register.rs
proxyops_gateway/mcp-gateway/src/identity/: auth.rs  mod.rs  scoping.rs
proxyops_gateway/mcp-gateway/src/mcp/: budget.rs  handlers.rs  handlers_whatif.rs  mod.rs  tools.rs  transport.rs  validation.rs
proxyops_gateway/mcp-gateway/src/prescriptive/: catalog.rs  client.rs  mod.rs  router.rs
proxyops_gateway/mcp-gateway/src/redis/: mod.rs
proxyops_gateway/mcp-gateway/tests/: resilience.rs
proxyops_gateway/rust-proxy/: Cargo.toml  Dockerfile
proxyops_gateway/rust-proxy/src/: auth.rs  circuit_breaker.rs  main.rs  metrics.rs  request_id.rs
sandbox/: README.md  index.html  vercel.json
sdk/python/: README.md  pyproject.toml
sdk/python/tokensentinel/: __init__.py  client.py  models.py
spring-boot-sdk/: README.md  pom.xml
(+36 files in other folders)
