[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2024"
description = "TokenSentinel MCP Server — 11 tools for LLM cost observability, model routing, budget enforcement, and prescriptive cost optimization. MCP HTTP transport (SSE + POST/message)."
keywords = ["mcp", "llm", "cost", "observability", "model-router", "budget", "prescriptive"]
categories = ["web-programming", "development-tools", "ai"]
authors = ["TokenSentinel"]
license = "MIT"
homepage = "https://github.com/Tejas163/TokenSentinel"
repository = "https://github.com/Tejas163/TokenSentinel"
readme = "README.md"
documentation = "https://github.com/Tejas163/TokenSentinel/blob/main/proxyops_gateway/mcp-gateway/README.md"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = "0.28"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
jsonschema = "0.19"
