[package]
name = "proxyops-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
# Proxy and networking
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "catch-panic"] }

# Distributed Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["v4"] }
