[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tokensentinel"
version = "1.0.0"
description = "Official Python SDK for TokenSentinel — LLM cost governance & optimization platform"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "TokenSentinel" },
]
requires-python = ">=3.10"
keywords = ["llm", "cost", "optimization", "openai", "anthropic", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Tejas163/TokenSentinel"
Source = "https://github.com/Tejas163/TokenSentinel"
Tracker = "https://github.com/Tejas163/TokenSentinel/issues"
